# arkouda-xarray

./: README.md  pyproject.toml
arkouda_xarray/: __init__.py  arkoudamanager.py
